--- a/scss/partials/_table.scss
+++ b/scss/partials/_table.scss
@@ -2,15 +2,17 @@
     width: 100%;
     background-color: $secondary-color;
     text-align: center;
-    margin-bottom: 30px;
+    margin: 20px 0 30px 0;
     .teamName{
         text-align: left;
     }
     th{
+        @extend %table-padding;
         font-size: 13pt;
         font-weight: 600;
     }
     td{
+        @extend %table-padding;
         padding: 15px;
     }
     img{
